--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <div>
                 <a href="register.html" class="nav-item">Регистрация</a>
                 <a href="account.html" class="nav-item">Личный кабинет</a>
-                <a href="" class="nav-item">О нас</a>
-                <a href="" class="nav-item">Контакты</a>
+                <a href="mini-mouse.html" class="nav-item">О нас</a>
+                <a href="mini-mouse.html" class="nav-item">Контакты</a>
                 <a href="excursion.html" class="nav-item">Наши экскурсии</a>
             </div>
             <div style="padding-left: 5%;">
@@ -68,7 +68,7 @@
                     <h3 class="text-h3">В Москве проводятся экскурсии по красной площади</h3>
                     <p class="relaire">Рейтинг 4/5</p>
                     <div class="button-next">
-                    <a href=""><button class="button">Далее</button></a>
+                    <a href="mini-mouse.html"><button class="button">Далее</button></a>
                     </div>
 
                 </div>
@@ -78,7 +78,7 @@
                     <h3 class="text-h3">В самос простом музее присутсвует множество всего, чего ничего необычного со времён 2 мировой</h3>
                     <p class="relaire">Рейтинг 4.5/5</p>
                     <div class="button-next">
-                    <a href=""><button class="button">Далее</button></a>
+                    <a href="mini-mouse.html"><button class="button">Далее</button></a>
                     </div>
                 </div>
 
@@ -87,7 +87,7 @@
                     <h3 class="text-h3">Экскурсии по церквям Москвы, проводятся очень долго и долгосрочно</h3>
                     <p class="relaire">Рейтинг 4.1/5</p>
                     <div class="button-next">
-                    <a href=""><button class="button">Далее</button></a>
+                    <a href="mini-mouse.html"><button class="button">Далее</button></a>
                     </div>
                 </div>
 
@@ -96,7 +96,7 @@
                     <h3 class="text-h3">В честь столетия столетия проводятся музейные выстовки по музею</h3>
                     <p class="relaire">Рейтинг 4.9/5</p>
                     <div class="button-next">
-                    <a href=""><button class="button">Далее</button></a>
+                    <a href="mini-mouse.html"><button class="button">Далее</button></a>
                     </div>
                 </div>
 
@@ -115,7 +115,7 @@
 
                     <a href="" class="main-text-a">Забыли пароль?</a>
                     <div class="button-next">
-                        <a href=""><button class="button-enter">🔒Войти</button></a>
+                        <a href="register.html"><button class="button-enter">🔒Войти</button></a>
                     </div>
                     </form>
                 </div>
@@ -285,7 +285,7 @@
                             <div class="comments-in-in">
                                 <img src="img/user1.png" style="width: 50px; height: 50px;">
                                 <p class="text-user">Пользователь</p>
-                                <a class="text-link" href="" >ссылка↑</a>
+                                <a class="text-link" href="mini-mouse.html" >ссылка↑</a>
                             </div>
 
                             <p class="text-link">23.12.2024</p>
@@ -321,8 +321,8 @@
                             <div class="kjdj">
                                 <a href="register.html" class="nav-item">Регистрация</a>
                                 <a href="account.html" class="nav-item">Личный кабинет</a>
-                                <a href="" class="nav-item">О нас</a>
-                                <a href="" class="nav-item">Контакты</a>
+                                <a href="mini-mouse.html" class="nav-item">О нас</a>
+                                <a href="mini-mouse.html" class="nav-item">Контакты</a>
                                 <a href="excursion.html" class="nav-item">Наши экскурсии</a>
                             </div>
                         </div>
